# SocialCentral

./: .replit  API.md  API_DOCUMENTATION.md  CODE_STRUCTURE_IMPROVEMENTS.md  COMFYUI_TECHNICAL_DOCUMENTATION.md  DEVELOPER_GUIDE.md  ENHANCEMENT_ROADMAP.md  MAJOR_ENHANCEMENTS_SUMMARY.md  POSTMAN_SETUP_GUIDE.md  README.md  SYSTEM_ARCHITECTURE_FLOWCHART.md  SocialSync_API.postman_collection.json  SocialSync_Environment.postman_environment.json  TYPE_ORGANIZATION_SUMMARY.md  package-lock.json  package.json  pyproject.toml  replit.md  start_python_server.py  tsconfig.json
client/src/: App.tsx  index.css
client/src/components/: AIContentGenerator.tsx  ComfyProgressMonitor.tsx  ComfyUISetupTab.tsx  Header.tsx  (+22 more)
docs/: API-GUIDE.md  COMFYUI-GUIDE.md  DEPLOYMENT.md
server/: audit-logger.ts  comfy-connection.ts  comfy-diagnostics.ts  comfy-direct-test.ts  comfy-fallback.ts  comfy-restart.ts  comfy-ui-broken.ts  comfy-ui.ts  comfy-websocket.ts  database.py  fastapi_server.py  index.ts  init-db.ts  main.py  oauth.ts  recommendation-engine.ts  routes-comfy-startup.ts  routes.py  routes.ts  run_python.py  server-scheduler.ts  setup.ts  ssh-tunnel.ts  storage-backup.ts  storage-db.ts  storage-simple.ts  storage.ts  vast-ai.ts  websocket_manager.py  workflow-analyzer.ts
server/constants/: README.md  index.ts
server/features/: README.md  index.ts
server/routes/: analytics.ts  auth.ts  comfy.ts  content.ts  index.ts  platforms.ts  vast.ts  workflows.ts
server/scripts/: README.md  comfyui-setup.sh  script-manager.ts
server/types/: README.md  index.ts
shared/: schema.ts
(+67 files in other folders)
